fixed overflowed div of coding profile

--- a/frontend/src/pages/Coding/Coding.css
+++ b/frontend/src/pages/Coding/Coding.css
@@ -61,3 +61,17 @@
   color: white;
   text-decoration: none;
 }
+
+@media (max-width: 600px) {
+  .coding {
+    margin: 0;
+    padding: 0;
+    margin-top: 50px;
+  }
+  .project hr {
+    width: 280px;
+  }
+  /* .project .card {
+    margin-top: 30px;
+  } */
+}
